--- a/css/styles.css
+++ b/css/styles.css
@@ -34,6 +34,45 @@ body{
 .section{
     padding: 94px,0px;
 }
+.button{
+    background-color: var(--hover-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border: 1px;
+    border-radius: 4px;
+
+    color: var(--first-bg-color);    
+    font-size: 16px;
+    line-height: 1.88;
+    letter-spacing: 0.06em;
+    font-weight: 700;
+
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+    transition-property: background-color;
+    transition-duration: 250ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.button:hover{
+    background-color: var(--button-hover-color);
+}
+.backdrop{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    z-index: 2;
+    opacity: 1;
+    transition-property: opacity;
+    transition-duration: 400ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);  
+}
+.is-hidden{
+    opacity: 0;
+    pointer-events: none;
+}
 /* Header */
 .header{    
     background-color: var(--first-bg-color);   
@@ -41,19 +80,22 @@ body{
     padding-bottom: 24px;
     border-bottom: 1px solid var(--header-border-color);
 }
-.header-container{
+.header--right{
     display: flex;
     align-items: center;
     justify-content: flex-end;
 }
-.navigation{    
+.nav{    
     display: flex;
     align-items: center;
     flex-wrap: wrap;
+    
+}
+.nav--center{
     margin-right: auto;
 }
 
-.nav-logo{
+.nav__logo{
     text-decoration: none;
     font-family: 'Raleway', sans-serif;
     font-size: 26px;
@@ -61,23 +103,23 @@ body{
     font-weight: 700;
     margin-right: 93px;
 }
-.nav-logo-span{
+.nav__logo__span{
     color: var(--hover-color);
 }
 
-.nav-menu{
+.nav__menu{
     list-style-type: none;
     display: inline-flex;
     margin: 0;
     padding: 0;
 }
-.nav-menu-item{
+.nav__item{
     position: relative;
 }
-.nav-menu-item:not(:last-child){
+.nav__item:not(:last-child){
     margin-right: 50px;
 }
-.nav-menu-item-link{
+.nav__link{
     text-decoration: none;
     font-size: 14;
     letter-spacing: 0.02em;
@@ -87,12 +129,26 @@ body{
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.nav-menu-item-link:focus,
-.nav-menu-item-link:hover{
+.nav__link--selected{
+    color: var(--hover-color);
+}
+.nav__link--selected::after{
+    content: '';
+    position: absolute;
+    bottom: -32px;
+    left: 0;
+    width: 100%;
+    height: 4px;
+    background-color: var(--hover-color);
+    border-radius: 2px;
+    pointer-events: none;
+}
+.nav__link:focus,
+.nav__link:hover{
     color: var(--hover-color);
 }
 
-.e-mail{
+.mail{
     margin-right: 50px;
     text-decoration: none;
     font-size: 14;
@@ -106,11 +162,11 @@ body{
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.e-mail:hover,
-.e-mail:focus{
+.mail:hover,
+.mail:focus{
     color: var(--hover-color);
 }
-.mail-icon{
+.mail__icon{
     width: 16px;
     height: 12px;
     margin-right: 10px;
@@ -119,8 +175,8 @@ body{
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.e-mail:hover .mail-icon,
-.e-mail:focus .mail-icon{
+.mail:hover .mail__icon,
+.mail:focus .mail__icon{
     fill: var(--hover-color);
 }
 
@@ -141,7 +197,7 @@ body{
 .tel:focus{
     color: var(--hover-color);
 }
-.tel-icon{    
+.tel__icon{    
     width: 10px;
     height: 16px;
     margin-right: 10px;
@@ -151,24 +207,9 @@ body{
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.tel:hover .tel-icon,
-.tel:focus .tel-icon{
+.tel:hover .tel__icon,
+.tel:focus .tel__icon{
     fill: var(--hover-color);
-}
-
-.selected{
-    color: var(--hover-color);
-}
-.selected::after{
-    content: '';
-    position: absolute;
-    bottom: -32px;
-    left: 0;
-    width: 100%;
-    height: 4px;
-    background-color: var(--hover-color);
-    border-radius: 2px;
-    pointer-events: none;
 }
 /* Main part */
 /* Banner section*/
@@ -182,7 +223,7 @@ body{
     padding-top: 200px;
     padding-bottom: 200px;
 }
-.banner-title{
+.banner__title{
     color: var(--first-bg-color);
     text-transform: uppercase;
     font-size: 44px;
@@ -195,43 +236,9 @@ body{
     margin-bottom: 30px;
     width: 696px;
 }
-.banner-button{
-    background-color: var(--hover-color);
-    color: var(--first-bg-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border: 1px;
-    border-radius: 4px;
-    font-size: 16px;
-    line-height: 1.87;
-    letter-spacing: 0.06em;
-    font-weight: 700;
-    padding: 10px 32px;
-    transition-property: background-color;
-    transition-duration: 250ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
-}
-.banner-button:hover{
-    background-color: var(--button-hover-color);
-}
-.backdrop{
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.2);
-    z-index: 2;
-    opacity: 1;
-    transition-property: opacity;
-    transition-duration: 400ms;
-    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);  
-}
-.is-hidden{
-    opacity: 0;
-    pointer-events: none;
-}
-.backdrop.is-hidden .modal{
-    transform: translate(-50%,-50%) scale(0.5);
+.banner__button{    
+    padding-left: 32px;
+    padding-right: 32px;
 }
 .modal{
     position: absolute;
@@ -241,10 +248,12 @@ body{
     height: 581px;
     transform: translate(-50%,-50%) scale(1);
     background-color: var(--first-bg-color);  
-    transition: transform 400ms cubic-bezier(0.4, 0, 0.2, 1);
-    
+    transition: transform 400ms cubic-bezier(0.4, 0, 0.2, 1);    
 }
-.modal-close-button{    
+.backdrop.is-hidden .modal{
+    transform: translate(-50%,-50%) scale(0.5);
+}
+.modal__close-button{    
     position: absolute;
     top: 8px;
     right: 8px;
@@ -257,19 +266,19 @@ body{
     border-radius: 50%;
     border: 1px solid rgba(0, 0, 0, 0.1);
 }
-.modal-close-button-icon{
+.modal__close-button__icon{
     height: 18px;
     width: 18px;
     fill: var(--nav-text-color);
 }
-.modal-form{
+.modal__form{
     padding: 40px;
     width: 100%;
     height: 100%;
     margin-left: auto;
     margin-right: auto;
 }
-.modal-form-title{
+.form__title{
     display: block;
     font-weight: 700;
     font-size: 20px;
@@ -279,7 +288,7 @@ body{
     color: var(--title-color);
     margin-bottom: 12px;
 }
-.modal-form-item-title{
+.form__field__title{
     display: block;
     text-align: left;
     font-size: 12px;
@@ -289,14 +298,14 @@ body{
     margin-bottom: 4px;
     
 }
-.modal-form-field{
+.form__field{
     position: relative;
     margin-bottom: 10px;
 }
-.modal-form-field:focus-within .modal-form-item-icon{
+.form__field:focus-within .form__field__icon{
     fill: var(--hover-color)
 }
-.modal-form-item-icon{
+.form__field__icon{
     position: absolute;
     top: 40px;
     left: 12px;
@@ -307,19 +316,19 @@ body{
     fill: var(--title-color);
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-form-text-input{
+.form__text-input{
     padding: 12px 12px 12px 42px;    
     width: 100%;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-form-text-input:focus{
+.form__text-input:focus{
     border: 1px solid var(--hover-color);
     outline: none;
 }
 
-.modal-form-textarea{
+.form__textarea{
     width: 100%;
     padding: 12px 16px;
     border: 1px solid rgba(33, 33, 33, 0.2);
@@ -328,72 +337,58 @@ body{
     margin-bottom: 20px;
     transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-form-textarea:focus{
+.form__textarea:focus{
     border: 1px solid var(--hover-color);
     outline: none;
 }
-.modal-form-textarea::placeholder{
+.form__textarea::placeholder{
     font-weight: 400;
     font-size: 12px;
     line-height: 14px;
     letter-spacing: 0.01em;
     color: rgba(117, 117, 117, 0.5);
 }
-.modal-form-confirmation{
+.form__confirmation{
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
     margin-bottom: 30px;
 }
-.modal-form-confirmation-checkbox{    
+.form__checkbox{    
     appearance: none;
     position: absolute;
 }
-.modal-form-confirmation-icon{
+.form__checkbox__icon{
     width: 16px;
     height: 15px;
     margin-right: 8px;
     background-image: url(../images/modal-form-checkbox-empty.svg);
     transition: background-image 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.modal-form-confirmation-checkbox:checked ~ .modal-form-confirmation-icon{
+.form__checkbox:checked ~ .form__checkbox__icon{
     background-image: url(../images/modal-form-checkbox-checked.svg);    
     background-color: var(--hover-color);
     background-size:auto;
     background-repeat: no-repeat;
     background-position: center;
 }
-.modal-form-confirmation-title{
+.form__confirmation__title{
     font-size: 14px;
     line-height: 1.7;
     letter-spacing: 0.03em;
     color: var(--main-text-color);
 }
-.modal-form-confirmation-title-link{
+.form__confirmation__link{
     text-decoration: underline;
     color: var(--hover-color);
 }
-.modal-form-submit-button{
-    padding: 10px 55px 10px 56px;
-    font-style: normal;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.9;
-    letter-spacing: 0.06em;
-    text-align: center;
-    color: var(--first-bg-color);
-    background-color: var(--hover-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border: 1px;
-    border-radius: 4px;
-}
-.modal-form-submit-button:hover,
-.modal-form-submit-button:focus{
-    background-color: var(--button-hover-color);
+.form__button{
+    padding-left: 56px;
+    padding-right: 55px; 
 }
 /* Our qualities section */
-.qualities-items{
+.qualities__list{
     background-color: var(--first-bg-color);
     list-style-type: none;
     margin-top: 94px;
@@ -403,25 +398,25 @@ body{
     justify-content:center;
     flex-wrap: wrap;
 }
-.qualities-item{
+.qualities__item{
     width: 270px;
     text-align: left;
     flex-basis: calc((100% - 30px * 4) / 4);
 }
-.qualities-item:not(:last-child){
+.qualities__item:not(:last-child){
     margin-right: 30px;
 }
-.qualities-icon{
+.qualities__item__icon{
     width: 70px;
     height: 70px;    
 }
-.qualities-icon-background{
+.qualities__item__icon--background{
     background-color: var(--third-bg-color);
     border-radius: 4px;
     padding: 25px 100px;
     margin-bottom: 30px;
 }
-.qualities-item-title{
+.qualities__item__title{
     font-size: 14px;
     color: var(--title-color);
     font-weight: 700;
@@ -429,7 +424,7 @@ body{
     line-height: 1.1;
     padding-bottom: 10px;
 }
-.qualities-item-description{
+.qualities__item__description{
     color: var(--main-text-color);
     line-height: 1.71;
 }
@@ -438,27 +433,27 @@ body{
     background-color: var(--first-bg-color);
     margin-bottom: 94px;
 }
-.tasks-title{
+.tasks__title{
     text-align: center;
     color: var(--title-color);
     font-weight: 700;
     font-size: 36px;
     padding-bottom: 50px;
 }
-.tasks-items{
+.tasks__list{
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
     list-style-type: none;
 }
-.tasks-item{
+.tasks__item{
     flex-basis: calc((100% - 30px * 3) / 3);
     position: relative;
 }
-.tasks-item:not(:last-child){
+.tasks__item:not(:last-child){
     margin-right: 30px;
 }
-.task-item-title{
+.tasks__item__title{
     position: absolute;
     width: 100%;
     padding: 27px 0px;
@@ -479,38 +474,38 @@ body{
     padding-top: 94px;
     padding-bottom: 94px;
 }
-.team-title{
+.team__title{
     color: var(--title-color);
     font-weight: 700;
     font-size: 36px;
     padding-bottom: 50px;
 }
-.team-items{
+.team__list{
     list-style-type: none;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
 }
-.team-item{    
+.team__item{    
     background: var(--first-bg-color);
     box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
     border-radius: 0px 0px 4px 4px;
     flex-basis: calc((100% - 30px * 4) / 4);
 }
-.team-item:not(:last-child){
+.team__item:not(:last-child){
     margin-right: 30px;
 }
-.team-item-image{
+.team__item__image{
     padding-bottom: 30px;
 }
-.team-item-title{
+.team__item__title{
     color: var(--title-color);
     font-weight: 500;
     font-size: 16px;
     line-height: 1.2;
     padding-bottom: 10px;
 }
-.team-item-duty{
+.team__item__duty{
     color: var(--main-text-color);
     font-size: 16px;
     line-height: 1.2;
@@ -522,10 +517,10 @@ body{
     display: inline-flex;
     padding-bottom: 30px;
 }
-.social-icons-item:not(:last-child){
+.social-icons__item:not(:last-child){
     margin-right: 10px;
 }
-.social-icons-link{
+.social-icons__link{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -545,12 +540,12 @@ body{
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.social-icons-link:hover .social-icon,
-.social-icons-link:focus .social-icon{
+.social-icons__link:hover .social-icon,
+.social-icons__link:focus .social-icon{
     fill: var(--first-bg-color);
 }
-.social-icons-link:hover,
-.social-icons-link:focus{
+.social-icons__link:hover,
+.social-icons__link:focus{
     background-color: var(--hover-color);
 }
 /*Regular-custommers*/
@@ -560,26 +555,26 @@ body{
     padding-top: 94px;
     padding-bottom: 94px;
 }
-.regular-customers-title{
+.regular-customers__title{
     color: var(--title-color);
     font-weight: 700;
     font-size: 36px;
     line-height: 1.2;
     padding-bottom: 50px;
 }
-.regular-customers-items{
+.regular-customers__list{
     display: flex;
     justify-content: center;
     align-items: center;
 }
-.regular-customers-item{
+.regular-customers__item{
     list-style-type: none;
     flex-basis: calc((100% - 30px * 6) / 6);
 }
-.regular-customers-item:not(:last-child){
+.regular-customers__item:not(:last-child){
     margin-right: 30px;
 }
-.regular-customers-link{
+.regular-customers__link{
     display: flex;
     justify-content: center;
     align-items: center;
@@ -591,7 +586,7 @@ body{
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.regular-customers-link-icon{
+.regular-customers__link__icon{
     width: 106px;
     height: 60px;
     fill: var(--link-color);
@@ -599,12 +594,12 @@ body{
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.regular-customers-link:hover,
-.regular-customers-link:focus{
+.regular-customers__link:hover,
+.regular-customers__link:focus{
     border: 1px solid var(--hover-color);
 }
-.regular-customers-link:hover .regular-customers-link-icon,
-.regular-customers-link:focus .regular-customers-link-icon{
+.regular-customers__link:hover .regular-customers__link__icon,
+.regular-customers__link:focus .regular-customers__link__icon{
     fill: var(--hover-color);
 }
 /* Footer section */
@@ -613,7 +608,7 @@ body{
     padding-top: 60px;
     padding-bottom: 60px;
 }
-.footer-logo{
+.footer__logo{
     text-decoration: none;
     font-family: 'Raleway', sans-serif;
     font-size: 26px;
@@ -621,49 +616,49 @@ body{
     color: var(--first-bg-color);
     font-weight: 700;
 }
-.footer-logo-span{
+.footer__logo__span{
     color: var(--hover-color);
 }
-.footer-address{
+.footer__address{
     line-height: 1.71;
     color: var(--first-bg-color);
     font-style: normal;
     margin-bottom: 9px;
     margin-top: 20px;
 }
-.footer-e-mail{
+.footer__mail{
     text-decoration: none;
     line-height: 1.71;
     color: var(--footer-text-color);    
     font-style: normal;
     padding-bottom: 9px;
 }
-.footer-e-mail:hover,
-.footer-e-mail:focus{
+.footer__mail:hover,
+.footer__mail:focus{
     color: var(--hover-color);
 }
-.footer-tel{
+.footer__tel{
     text-decoration: none;
     line-height: 1.71;
     color: var(--footer-text-color);
     font-style: normal;    
 }
-.footer-tel:hover,
-.footer-tel:focus{
+.footer__tel:hover,
+.footer__tel:focus{
     color: var(--hover-color);
 }
-.footer-e-mail-div{
+.footer__mail--div{
     margin-bottom: 9px;
 }
-.footer-content{
+.footer__content{
     display: flex;
     align-items: baseline;
 }
-.footer-information{
+.footer__information{
     margin-right: 70px;
     flex-basis: calc((50% - 70px - 93px/2) / 2);
 }
-.footer-social-links-title{
+.footer__social-links__title{
     text-transform: uppercase;
     font-size: 14px;
     line-height: 1.1;
@@ -671,24 +666,24 @@ body{
     padding-bottom: 20px;
     color: var(--first-bg-color);
 }
-.footer-social-icons-link{
+.footer__social-icons__link{
     background-color: rgba(255, 255, 255, 0.1);
     transition-property: background-color;
     transition-duration: 250ms;
     transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer-social-icon{
+.footer__social-icon{
     fill:var(--first-bg-color);    
 }
-.footer-social-icons-link:hover,
-.footer-social-icons-link:focus{
+.footer__social-icons__link:hover,
+.footer__social-icons__link:focus{
     background-color: var(--hover-color);
 }
-.footer-subscribe{
+.subscribe{
     margin-left: 93px;
     flex-basis: calc(50%);
 }
-.footer-subscribe-title{
+.subscribe__title{
     display: block;
     font-weight: 700;
     font-size: 14px;
@@ -698,12 +693,12 @@ body{
     color: var(--first-bg-color);
     margin-bottom: 20px;
 }
-.footer-subscribe-input-field{
+.subscribe__field{
     display: flex;
     justify-content: center;  
 
 }
-.footer-subscribe-input{
+.subscribe__mail{
     display: block;
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -717,38 +712,24 @@ body{
     padding: 15px 16px;
 
 }
-.footer-subscribe-input::placeholder{
+.subscribe__mail::placeholder{
     font-weight: 400;
     font-size: 16px;
     line-height: 1.25px;
     letter-spacing: 0.03em;
     color: rgba(255, 255, 255, 0.6);
 }
-.footer-subscribe-input:focus{
+.subscribe__mail:focus{
     outline: 1px;
 }
-.footer-subscribe-button{
+.subscribe__button{
     display: flex;
     justify-content: center;
     align-items: center;
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.9;
-    text-align: center;
-    letter-spacing: 0.06em;
-    color: var(--first-bg-color);
     padding: 10px 28px 10px 29px;
-    background-color: var(--hover-color);
-    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border: 1px;
-    border-radius: 4px;
     margin-left: 12px;
-    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.footer-subscribe-button:hover{
-    background-color: var(--button-hover-color);
-}
-.footer-subscribe-button-icon{
+.subscribe__button__icon{
     height: 24px;
     width: 24px;
     fill: var(--first-bg-color);    
